# iserverd

./: .gitignore  CONTACT  COPYRIGHT  CREDITS  IServerd.spec  IServerd.spec.in  Makefile  Makefile.in  README  README.asp  README.md  README.rus  README.setup  README.sysconfig  TODO  aclocal.m4  config.guess  config.status  configure  configure.in  configure.lineno  iserv.conf.txt  iserverd.service  ltmain.sh  version.tag
README/: Architecture.txt  BUGS  Changelog  README.0.txt  README.asp  README.rus  README.setup  README.sysconfig  packets dump.txt  ppt_format.txt  v3_proto.conf.txt  v5_proto.conf.txt  wwp-format.txt
README/OSCAR HTML set/: _bottom.htxt  _download.htxt  auth_failed.html  basic.html  capabilities.html  changes.html  cli_cookie.html  cli_ident.html  credits.html  elch01.html  elch01_pkts.html  elmd5.html  elmd5_pkts.html  errorlist.html  families.html  icq_search.html  icq_ssi_auth.html  index.html  info_block.html  lists.html  login.html  message.html  online_caps.html  plugins.html  rate_limits.html  readme.md  sequences.html  service_request.html  snac_01_01.html  snac_01_02.html  snac_01_03.html  snac_01_04.html  snac_01_05.html  snac_01_06.html  snac_01_07.html  snac_01_08.html  snac_01_09.html  snac_01_0a.html  snac_01_0b.html  snac_01_0c.html  (+234 more)
README/OSCAR HTML set/examples/: download_icon.html  service_request.html  upload_icon.html
README/OSCAR HTML set/wanted/: snac_15_02_07d0_0a8c.html  snac_15_02_07d0_0a96.html  snac_15_02_07d0_0aaa.html  snac_15_02_07d0_0ab4.html  snac_15_02_07d0_0ab9.html  snac_15_02_07d0_0abe.html  snac_15_02_07d0_0ac8.html  snac_15_02_07d0_0acd.html  snac_15_02_07d0_0ad2.html  snac_15_02_07d0_0ad7.html
README/V3G HTML set/: client.html  index.html  server.html
config/: loadparm.cpp  loadparm.h  parse.cpp
config/actions/: actions.l  actions.y  actions_proto.h  actions_publ.cpp  lex.yy.c  parse_tree.cpp  parse_tree.h  print_tree.cpp  y.tab.c  y.tab.h
contrib/isdwm/cgi-bin/: isdwm.cgi
contrib/isdwm/doc/: readme.rus
contrib/isdwm/themes/: theme1
data/: Makefile  Makefile.in
data/etc/: actions.conf.default  actions.conf.default.in  actions.conf.example  aim_proto.conf  astatus.conf.example  iserv.conf.default  iserv.conf.default.in  v3_proto.conf.default  v3_proto.conf.default.in  v5_proto.conf.default.in  v7_proto.conf.default  v7_proto.conf.default.in
data/etc/texts/: adm_notes.rus  adm_notes.txt  post_reg_auto.rus  post_reg_auto.txt  post_reg_man.rus  post_reg_man.txt  reg_mess.ptt
database/: contacts_db.cpp  cookies_db.cpp  database.h  db_proto.h  defrag_db.cpp  error_db.cpp  init_db.cpp  init_db.h  messages_db.cpp  online_db.cpp  ssi_db.cpp  ssi_db.h  uerror_db.cpp  userinfo_db.cpp
doc/: Architecture.txt  iserv.conf.txt  wwp_messages.txt
event/: epacket.cpp  epacket.h  etimer.cpp  euser.cpp  euser.h  event.h  scheduler.cpp
icqlog/: log_alarm.cpp  log_debug.cpp  log_system.cpp  log_users.cpp
include/: buffer.h  config.h  config.h.in  debug.h  defaults.h  defaults.h.in  dlinklist.h  fprocess.h  includes.h  interfaces.h  lock.h  log_alr.h  log_sys.h  log_usr.h  macros.h  md5.h  packet.h  process.h  proto.h  proto_defines.h  protos.h  public.h  safe_string.h  talloc.h  translate.h
isdcore/: broadcast.cpp  fprocess.cpp  handle.cpp  main.cpp  packet.cpp  process.cpp  process_init.cpp  public.cpp  sockets-ep.cpp  sockets-kq.cpp  sockets-p.cpp  sprocess.cpp
isdcore/AOL_link/: readme.txt
isdcore/ISD_link/: readme.txt
isdcore/sys_proto/: proto_handler.cpp  readme.txt  sys_proto.h  vsys_defines.h
isdcore/v2_proto/: readme.txt
isdcore/v3_proto/: fragment.cpp  make_packet.cpp  messages.cpp  proto_handler.cpp  readme.txt  register.cpp  search.cpp  v3_defines.h  v3_proto.h
isdcore/v4_proto/: readme.txt
isdcore/v5_proto/: make_meta.cpp  make_packet.cpp  messages.cpp  meta_user.cpp  proto_handler.cpp  readme.txt  register.cpp  search.cpp  v5_defines.h  v5_proto.h  v5crypt.cpp  v5crypt.h
isdcore/v7_proto/: aim_proto.h  aim_util.cpp  capabilities.cpp  capabilities.h  flap.cpp  make_packet.cpp  proto_handler.cpp  readme.txt  snac.cpp  tlv.cpp  tlv.h  v7_defines.h  v7_proto.h
isdcore/v7_proto/snac_families/: sn01_generic.cpp  sn02_location.cpp  sn03_buddylist.cpp  sn04_messaging.cpp  sn05_advert.cpp  sn06_invitation.cpp  sn07_admin.cpp  sn08_popup.cpp  sn09_bos.cpp  sn0A_search.cpp  sn0B_stats.cpp  sn0C_translate.cpp  sn0D_chatnvg.cpp  sn0E_chat.cpp  sn13_icq_contacts.cpp  sn15_ext_messages.cpp  sn17_registration.cpp  snac_protos.h  v7-compile.sh  v7-run.sh
man/: Makefile  Makefile.in  db_convert.1  iserv.conf.5  iserverd.8  v3_proto.conf.5  v5_proto.conf.5
netlib/: icq_addr.cpp  interface.cpp  network.cpp  tcpserver.cpp  udpserver.cpp
pactions/: actions.cpp  actions.h  logger.cpp
script/: Makefile  Makefile.in  convert_db.sh  convert_db.sh.in  icquser  icquser.sql  iserver_convert_db.sh  iserver_convert_db.sh.in  iserver_db_manage.sh  iserver_db_manage.sh.in  iserver_icquser  iserver_icquser.in  iserver_post_mess.cgi.in  iserverd.logrotate  iserverd.sh  iserverd.sh.asp  iserverd.sh.asp.in  iserverd.sh.in  parameters.sh  post_mess.cgi
system/: buffer.cpp  daemon.cpp  icqtime.cpp  lock.cpp  md5.cpp  ms_fnmatch.cpp  ps_status.cpp  signals.cpp  slprintf.cpp  talloc.cpp  time.cpp  translate.cpp  util.cpp  util_file.cpp  util_pipe.cpp  util_shm.cpp  util_str.cpp
utils/: broadcast.cpp  chk_actions.cpp  chk_aim_cfg.cpp  db_check.cpp  db_convert.cpp  dincludes.h  disconnect.cpp  mktemp.cpp  online_cnt.cpp  server_status.cpp  translate.cpp  translate.h  users_cnt.cpp  webpager.cpp
